--- a/school-site/index.html
+++ b/school-site/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Lee Beck">
         <title>Franzen Irony University</title>
         
         <link rel="stylesheet" href="style.css">
